# ai-project

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: journal.md
docs/milestones/: 00_project_scaffolding.md  01_llm_fundamentals.md  02_data_ingestion_preprocessing.md  03_retrieval_augmented_generation.md  04_agentic_flows_tooling.md  05_model_context_protocol.md  06_evaluation_safety.md  07_interface_ux.md  08_deployment_scaling.md
src/ai_learning_studio/: __init__.py  cli.py  planning.py
tests/: test_planning.py
