[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-learning-studio"
version = "0.1.0"
description = "A modular laboratory for learning modern AI system design."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "AI Learning Studio Maintainers"}]
dependencies = []

[project.optional-dependencies]
dev = [
    "black~=24.4",
    "mypy~=1.10",
    "ruff~=0.5.0",
    "pytest~=8.2",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
src = ["src"]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "C4",
]
ignore = ["E203"]

[tool.mypy]
python_version = "3.10"
strict = false
warn_unused_configs = true
packages = ["ai_learning_studio"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
